# Snell-Vern-Hybrid-Drive-Matrix

./: .gitignore  CHANGELOG.md  PAPERS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: aeon-python-ci.yml  aeon-security.yml  build.yml  conventional-commits.yml  lint.yml  node.yml  release.yml  rust.yml  security.yml  test.yml
docs/: CI_CD_PIPELINE.md  COMPATIBILITY_MATRIX.md  ENGINEERING_STANDARDS.md  HEALTH_DASHBOARD.md  IMPLEMENTATION_SUMMARY.md  WORKFLOW_STATUS.md
docs/outreach/: dstg_asca_followup_draft.md  elad_genish_dm_draft.md
src/snell_vern_matrix/: __init__.py  cli.py  drive_matrix.py  memory.py  self_model.py
src/snell_vern_matrix/agents/: __init__.py  agent_01_orchestrator.py  agent_02_ci_sentinel.py  agent_03_memory_keeper.py  agent_04_constraint_guardian.py  agent_05_phase_tracker.py  agent_06_lucas_analyst.py  agent_07_field_weaver.py  agent_08_ternary_logic.py  agent_09_self_model_observer.py  agent_10_repo_sync.py  agent_11_test_validator.py  agent_12_doc_keeper.py  agent_13_coherence_monitor.py  cognitive_cycle.py  orchestrator.py
src/snell_vern_matrix/federation/: __init__.py  adapters.py  mesh.py
src/snell_vern_matrix/glyph_phase_engine/: engine.py
src/snell_vern_matrix/recursive_field/: __init__.py
src/snell_vern_matrix/recursive_field_math/: continued_fraction.py  egyptian_fraction.py  fibonacci.py  field.py  generating_functions.py  lucas.py  ratios.py  signatures.py
tests/: __init__.py  test_agents.py  test_cognitive_cycle.py  test_drive_matrix.py  test_federation_mesh.py  test_glyph_phase_engine.py  test_memory.py  test_recursive_field.py  test_recursive_field_math.py  test_recursive_field_math_extended.py  test_self_model.py
